--- a/LXZEALER/Base.lproj/Main.storyboard
+++ b/LXZEALER/Base.lproj/Main.storyboard
@@ -108,10 +108,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_me" translatesAutoresizingMaskIntoConstraints="NO" id="Ojg-JF-EOc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg_me" translatesAutoresizingMaskIntoConstraints="NO" id="Ojg-JF-EOc">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pGv-5T-SbY">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pGv-5T-SbY">
                                 <rect key="frame" x="257" y="57" width="86" height="86"/>
                                 <color key="backgroundColor" white="0.25" alpha="0.40398015202702703" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <constraints>
@@ -125,7 +125,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_headinmage" translatesAutoresizingMaskIntoConstraints="NO" id="gSr-sT-8dg">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="bg_headinmage" translatesAutoresizingMaskIntoConstraints="NO" id="gSr-sT-8dg">
                                 <rect key="frame" x="260" y="60" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="GZD-Vc-C15"/>
@@ -138,7 +138,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="未登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fY8-Yk-3oD">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="未登录" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fY8-Yk-3oD">
                                 <rect key="frame" x="203" y="158" width="194" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="194" id="TTe-JR-8FC"/>
@@ -153,7 +153,7 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nLK-XK-cF4">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nLK-XK-cF4">
                                 <rect key="frame" x="257" y="57" width="86" height="86"/>
                                 <connections>
                                     <action selector="loginButtonAction:" destination="Dj5-ge-oB0" eventType="touchUpInside" id="uQT-rt-pck"/>
@@ -242,7 +242,7 @@
                                     <constraint firstAttribute="width" constant="253" id="ZJa-N2-tXS"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GQW-oX-Kor">
                                 <rect key="frame" x="190" y="200" width="253" height="30"/>
